[gd_scene load_steps=6 format=2]

[ext_resource path="res://Theme/kenvector_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Theme/kenneyUI.tres" type="Theme" id=2]
[ext_resource path="res://GUI/OptionsPopup.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="OptionsPopup" type="Popup"]
margin_top = 76.0
margin_right = 1240.0
margin_bottom = 76.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="OptionsPanel" type="Panel" parent="."]
margin_right = 1240.0
margin_bottom = 452.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="OptionsLabel" type="Label" parent="OptionsPanel/VBoxContainer"]
margin_right = 1200.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0.168627, 0.14902, 0.14902, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="GridContainer" type="GridContainer" parent="OptionsPanel/VBoxContainer"]
margin_top = 45.0
margin_right = 1200.0
margin_bottom = 179.0
columns = 2

[node name="Master" type="Label" parent="OptionsPanel/VBoxContainer/GridContainer"]
margin_top = 7.0
margin_right = 246.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Master  "

[node name="MasterVol" type="HSlider" parent="OptionsPanel/VBoxContainer/GridContainer"]
margin_left = 250.0
margin_right = 1200.0
margin_bottom = 42.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0

[node name="Music" type="Label" parent="OptionsPanel/VBoxContainer/GridContainer"]
margin_top = 53.0
margin_right = 246.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Music       "

[node name="MusicVol" type="HSlider" parent="OptionsPanel/VBoxContainer/GridContainer"]
margin_left = 250.0
margin_top = 46.0
margin_right = 1200.0
margin_bottom = 88.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0

[node name="SoundAffects" type="Label" parent="OptionsPanel/VBoxContainer/GridContainer"]
margin_top = 99.0
margin_right = 246.0
margin_bottom = 126.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sound Affects"

[node name="SoundVol" type="HSlider" parent="OptionsPanel/VBoxContainer/GridContainer"]
margin_left = 250.0
margin_top = 92.0
margin_right = 1200.0
margin_bottom = 134.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0

[node name="MasterVol" type="HBoxContainer" parent="OptionsPanel/VBoxContainer"]
margin_top = 183.0
margin_right = 1200.0
margin_bottom = 183.0

[node name="MusicVol" type="HBoxContainer" parent="OptionsPanel/VBoxContainer"]
margin_top = 187.0
margin_right = 1200.0
margin_bottom = 187.0

[node name="SoundAffectVol" type="HBoxContainer" parent="OptionsPanel/VBoxContainer"]
margin_top = 191.0
margin_right = 1200.0
margin_bottom = 191.0

[node name="FullScreen" type="CheckButton" parent="OptionsPanel/VBoxContainer"]
margin_top = 195.0
margin_right = 1200.0
margin_bottom = 255.251
text = "Full Screen"

[node name="Leave Options" type="Button" parent="OptionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1068.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -434.749
text = "Back"

[connection signal="value_changed" from="OptionsPanel/VBoxContainer/GridContainer/MasterVol" to="." method="_on_MasterVol_value_changed"]
[connection signal="value_changed" from="OptionsPanel/VBoxContainer/GridContainer/MusicVol" to="." method="_on_MusicVol_value_changed"]
[connection signal="value_changed" from="OptionsPanel/VBoxContainer/GridContainer/SoundVol" to="." method="_on_SoundVol_value_changed"]
[connection signal="toggled" from="OptionsPanel/VBoxContainer/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="pressed" from="OptionsPanel/Leave Options" to="." method="_on_Leave_Options_pressed"]
